fix footer arrows visible

--- a/views/css/mygooglereviews.css
+++ b/views/css/mygooglereviews.css
@@ -1,4 +1,4 @@
-.footer-container .wrap {
+.footer-container .carousel-container-layout-1 {
   display: none;
 }
 
